<resources>
    <string name="app_name">LoveCalculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="you">You</string>
    <string name="next_button_description">Proceed to the next step</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="me">Me</string>
    <string name="calculate">Calculate</string>
    <string name="your_score">Your Score</string>
    <string name="try_again">Try Again</string>
    <string name="next">Next</string>
    <string name="it_s_funs_and_many_more">It\'s Funs and Many more</string>
    <string name="img_on_board">img_vp2.</string>
    <string name="enter_names">names</string>
    <string name="history">histoty</string>
    <string name="icons8">button</string>
    <string name="img_gif">img1</string>
    <string name="history1">text2</string>
    <string name="text1">text</string>
</resources>