<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="16dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ExtraText">

            <ImageView
                android:id="@+id/iv_result_heart"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@drawable/img_2" />

            <TextView
                android:id="@+id/tv_you_result"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:text="@string/you"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewHeart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="❤️"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_me_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/me"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textYourScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="Your Score"
                android:textColor="@android:color/holo_red_light"
                android:textSize="28sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/scorePercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="100%"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="26dp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,SpUsage" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_try_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:backgroundTint="@color/red"
                android:text="@string/try_again"
                android:textColor="@color/black"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/icons8" />

            <ImageView
                android:id="@+id/img_history"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/icons" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
